# Cellar2XML2Web

./: README.md  docker-compose.yml
agents/: Dockerfile  query_agent.py  sitemap_builder.py  web_agent.py  web_builder.py
agents/common/: id_utils.py  kafka_utils.py
config/: base_config.yaml
control_panel/: app.js  index.html
misc/: cellar_curl_get  cellar_curl_post  main_schema.py  pyproject.toml
misc/notebooks/: Sitemap_Tester.ipynb
templates/: .eleventy.js  index.njk  maps.njk  package-lock.json  package.json
templates/_data/: sitemap.js
templates/_includes/layouts/: base.njk
templates/assets/: site.css
templates/layouts/: base.njk
xslt/: raw_to_sitemap.xslt
xslt/.ipynb_checkpoints/: raw_to_sitemap-checkpoint.xslt
